Update Humanoids 2025 video and paper links.

--- a/index.html
+++ b/index.html
@@ -75,30 +75,30 @@
         <p style="font-size:12px">
           <sup style="font-size:10px">1</sup>The University of Edinburgh &nbsp;&nbsp; 
           <sup style="font-size:10px">2</sup>Waseda University&nbsp;&nbsp; 
+        </p>
         <p style="font-size:14px">
           ❤️ Accepted at the <a href="https://2025humanoids.org/">2025 IEEE-RAS 24th International Conference on Humanoid Robots (Humanoids)</a>.
         </p>
       </div>
       <div class="buttons">
-        <a href="#" target="_blank">📜Paper (Coming soon)</a>
-        <a href="#" target="_blank">🎬Video (Coming soon)</a>
+        <a href="https://arxiv.org/abs/2508.12980">📜Paper (pre-print)</a>
+        <a href="https://www.youtube.com/watch?v=Yt6z29X6dPA">🎬Video</a>
       </div>
 
       <!-- Single YouTube Video -->
       <div class="video-section">
         <h2>Presentation Video</h2>
-        <!-- <div class="video-container">
+        <div class="video-container">
           <iframe width="560" 
             height="315" 
-            src="https://www.youtube.com/embed/AfnDWBqJzsY?si=aVq02X3sdEPQqYYl" 
+            src="https://www.youtube.com/embed/Yt6z29X6dPA?si=e9EsodPwJbq8q1F7" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             referrerpolicy="strict-origin-when-cross-origin" 
             allowfullscreen>
           </iframe>
-        </div> -->
-        <p>Coming soon!</p>
+        </div>
       </div>
 
       <div class="bibtex-section" id="bibtex">
@@ -106,7 +106,7 @@
         <button class="bibtex-copy-button" onclick="copyBibTeX()">
           Copy to Clipboard
         </button>
-        <pre style="text-align:left;"><code class="language-bibtex">@inproceedings{Lev__2005,
+        <pre style="text-align:left;"><code class="language-bibtex">@misc{Lev__2025,
   title={Scaling Whole-body Multi-contact Manipulation with Contact Optimization},
   author={Levé, Victor and Moura, João and Fujita, Sachiya and Miyake, Tamon and Tonneau, Steve and Vijayakumar, Sethu},
   booktitle={2025 IEEE-RAS 24th International Conference on Humanoid Robots (Humanoids)},
@@ -130,15 +130,16 @@
           Sethu Vijayakumar<sup style="font-size:12px">1</sup>
         </p>
         <p style="font-size:12px">
-          <sup style="font-size:10px">1</sup>The University of Edinburgh &nbsp;&nbsp; 
+          <sup style="font-size:10px">1</sup>The University of Edinburgh &nbsp;&nbsp;
+        </p>
         <p style="font-size:14px">
           ❤️ Accepted at the <a href="https://2024.ieee-humanoids.org/">2024 IEEE-RAS 23rd International Conference on Humanoid Robots (Humanoids)</a>.
         </p>
       </div>
 
       <div class="buttons">
-        <a href="https://www.arxiv.org/abs/2408.15726" target="_blank">📜Paper</a>
-        <a href="https://www.youtube.com/watch?v=AfnDWBqJzsY" target="_blank">🎬Video</a>
+        <a href="https://doi.org/10.1109/Humanoids58906.2024.10769591">📜Paper</a>
+        <a href="https://www.youtube.com/watch?v=AfnDWBqJzsY">🎬Video</a>
       </div>
 
       <!-- Single YouTube Video -->
@@ -165,10 +166,9 @@
         </button>
         <pre style="text-align:left;"><code class="language-bibtex">@inproceedings{Lev__2024,
   title={Explicit Contact Optimization in Whole-Body Contact-Rich Manipulation},
-  DOI={10.1109/humanoids58906.2024.10769591},
-  booktitle={IEEE-RAS 23rd Humanoids},
+  booktitle={IEEE-RAS 23rd International Conference on Humanoid Robots (Humanoids)},
   author={Levé, Victor and Moura, João and Saito, Namiko and Tonneau, Steve and Vijayakumar, Sethu},
-  month=nov, pages={451–458}, year={2024}}</code></pre>
+  pages={451–458}, year={2024}, DOI={10.1109/humanoids58906.2024.10769591}}</code></pre>
       </div>
     </div>
 
